--- a/index.html
+++ b/index.html
@@ -212,27 +212,27 @@
             
         </div>
         <div class="footer">
-            <div>
+            <div class="p-4">
                 <span class="footer-title">Services</span>
                 <a class="link link-hover">Branding</a>
                 <a class="link link-hover">Design</a>
                 <a class="link link-hover">Marketing</a>
                 <a class="link link-hover">Advertisement</a>
             </div>
-            <div>
+            <div class="p-4 lg:ml-40">
                 <span class="footer-title">Company</span>
                 <a class="link link-hover">About us</a>
                 <a class="link link-hover">Contact</a>
                 <a class="link link-hover">Jobs</a>
                 <a class="link link-hover">Press kit</a>
             </div>
-            <div>
+            <div class="p-4 lg:ml-40">
                 <span class="footer-title">Legal</span>
                 <a class="link link-hover">Terms of use</a>
                 <a class="link link-hover">Privacy policy</a>
                 <a class="link link-hover">Cookie policy</a>
             </div>
-            <div>
+            <div class="p-4 lg:ml-40">
                 <span class="footer-title">Newsletter</span>
                 <div class="form-control w-80">
                     <label class="label">
